mobile view of cart no longer overflows off of page

--- a/shopping-cart/src/App.scss
+++ b/shopping-cart/src/App.scss
@@ -369,31 +369,16 @@ a {
   width: 80%;
 }
 
-.item-container {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  border-bottom: 1px solid;
-  padding: 0;
-}
-
+/*
 .item-container > * {
-  /*border: 1px solid;*/
+  /*border: 1px solid;
   width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 23px;
 }
-
-.item-container > .item-title {
-  width: 400px;
-}
-
-.item-container > .img-container {
-  justify-content: flex-start;
-  padding: 20px;
-}
+*/
 
 .item-image-cart {
   width: 200px;
@@ -411,6 +396,8 @@ a {
 .button-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .tabs-mobile {
@@ -521,6 +508,31 @@ html {
   .item-text-container {
     width: 45%;
   }
+  .item-container > * {
+    /*border: 1px solid;*/
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 23px;
+  }
+  .item-container > .item-title {
+    max-width: 400px;
+  }
+
+  .item-container > .img-container {
+    justify-content: flex-start;
+    padding: 20px;
+  }
+  .item-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 1px solid;
+  }
+}
+
+@media (max-width: 425px) {
 }
 
 @media (max-width: 768px) {
@@ -772,6 +784,36 @@ html {
     &:hover {
       border-bottom: none;
     }
+  }
+
+  .item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    border-bottom: 1px solid;
+  }
+
+  .item-container > * {
+    font-size: 18px;
+    width: 100%;
+  }
+
+  .item-container > .item-title {
+    max-width: 80%;
+  }
+
+  .item.container > .img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .item-image-cart {
+    max-width: 150px;
+    object-fit: contain;
   }
 }
 
