--- a/shopping-cart/src/scss/Cart.scss
+++ b/shopping-cart/src/scss/Cart.scss
@@ -1,4 +1,4 @@
-.cart-container {
+/*.cart-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +20,7 @@
 }
 
 .item-container > * {
-  /*border: 1px solid;*/
+  /*border: 1px solid;
   width: 200px;
   display: flex;
   justify-content: center;
@@ -54,3 +54,4 @@
   display: flex;
   flex-direction: column;
 }
+*/
