--- a/shopping-cart/src/scss/ItemPage.scss
+++ b/shopping-cart/src/scss/ItemPage.scss
@@ -1,4 +1,4 @@
-.item-page-container {
+/*.item-page-container {
   display: flex;
   justify-content: space-around;
 
@@ -18,3 +18,4 @@
 .cart-items {
   display: flex;
 }
+*/
